tests/error/prim_ref.gw
// [contains] cannot declare references
 int @i;
